made nav links into ul to fix spacing

--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 }
 
 body {
-    font-family: 'Open Sans', sans-serif;
+    font-family: roboto, sans-serif;
     background-color: rgb(247, 247, 247);
     background-image: linear-gradient(rgb(247, 247, 247), rgb(226, 227, 230));
     color: rgb(34, 34, 34);
@@ -18,10 +18,11 @@ body {
 .container {
     display: flex;
     justify-content: center;
+    align-items: center;
     font-family: roboto;
     top: 0;
     width: 100%;
-    height: 15vh;
+    height: 10vh;
     z-index: 2;
     position: fixed;
     overflow-y: hidden;
@@ -32,15 +33,16 @@ body {
 .left-side {
     display: flex;
     margin-right: auto;
-    align-items: center;
     flex: 1 1 auto;
     justify-content: center;
     align-items: center;
     padding-left: 5%;
 }
 .left-side img {
+    display: flex;
     width: auto;
     max-height: 8vh;
+    padding: 16px;
 }
     .left-side a {
         display: flex;
@@ -57,14 +59,17 @@ body {
     }
 
     .right-side {
-        display: flex;
-        margin-left: auto;
-        align-items: center;
-        flex: 1 1 auto;
         padding-right: 5%;
     }
-        .right-side a {
+    .right-side ul {
+        display: flex;
+        margin-left: auto;
+        flex: 1 1 auto;
+    }
+        .right-side ul a {
+            display: flex;
             font-size: 20px;
+            align-items: center;
             justify-content: space-evenly;
             padding: 16px;
             margin-left: auto;
@@ -432,8 +437,8 @@ input, textarea {
     padding: 4%;
      }
 
-     nav a {
-         font-size: 100%;
+     .right-side ul a {
+         font-size: 20px;
      }
     
     .big-screen-h2 {
@@ -498,8 +503,9 @@ input, textarea {
          font-size: 1.2rem;
      }
 
-    .right-side a {
+    .right-side ul a {
         font-size: 22px;
+        padding: 26px;
     }
    
    .pricing-name {
